--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ html {
 }
 
 body {
+  background-color: solid gray;
+  font-family: "Quicksand", sans-serif;
   display: flex;
   margin: 0;
   width: 100%;
