--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ nav {
 }
 
 .top-section-nav {
-  /* background-color: black; */
   align-items: flex-end;
   display: flex;
   flex-direction: row;
@@ -42,21 +41,26 @@ nav {
 }
 
 button {
+  color: #1e96fc;
+  border: none;
   display: flex;
   flex-direction: row;
 }
 
 .nav-icon {
-  height: 1vh;
-  width: 1vw;
+  height: 3vh;
+  width: 2vw;
 }
 
 .nav-list-item {
+  border: 0;
   font-size: 15px;
+  height: 5vh;
+  width: 184px;
 }
 
 .right-side-container {
-  align-items: flex-end;
+  align-items: center;
   display: flex;
   flex-direction: column;
   height: 17vh;
@@ -64,14 +68,22 @@ button {
   margin-right: 18%;
 }
 
-.admin-container {
+.user-container {
   display: flex;
   flex-direction: row;
+  height: 5vh;
+  width: 15vw;
 }
 
-.admin-icon {
-  height: 5vh;
-  width: 5vw;
+.user-icon,
+.down-arrow {
+  height: 4vh;
+  width: 2vw;
+}
+
+.site-logo-image {
+  height: 13vh;
+  width: 6vw;
 }
 
 .shares-view {
@@ -103,10 +115,10 @@ button {
 }
 
 .top-section {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   flex-direction: row;
-  height: 10vh;
+  height: 21vh;
   justify-content: space-around;
 }
 
@@ -128,8 +140,4 @@ button {
 
 .playlist-section {
   padding-bottom: 9px;
-}
-
-.name {
-  font-size: ;
 }
