--- a/styles.css
+++ b/styles.css
@@ -109,11 +109,9 @@ button {
 .cards-grid {
   display: flex;
   flex-direction: row;
-  height: 50vh;
+  height: 45vh;
   margin-top: 3%;
-  padding-left: 3%;
-  padding-right: 5%;
-  width: 20vw;
+  width: 85vw;
 }
 
 .card {
@@ -123,7 +121,7 @@ button {
   flex-direction: column;
   height: 99%;
   justify-content: space-between;
-  margin: 10%;
+  margin: 1%;
   overflow-wrap: break-word;
   width: 80%;
 }
@@ -180,6 +178,7 @@ button {
 .link {
   background-color: #5d4e60;
   color: white;
+  font-size: 12px;
   margin-left: 1%;
   margin-right: 1%;
 }
@@ -222,7 +221,7 @@ button {
 }
 
 .breed,
-.toy,
-.shots-two {
+.shots,
+.favorite-toy {
   font-size: 12px;
 }
